# fpgas.online-infra

./: .ansible-lint  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: lint.yml  vm-test.yml
ansible/: site.yml  verify-pi.yml  verify-server.yml  verify.yml
ansible/inventory/group_vars/all/: ssh_keys.yml
ansible/inventory/host_vars/: fpgas.online.yml  gator.yml  negk.yml  ps1.fpgas.online.yml
ansible/roles/firewall/tasks/: main.yml
ansible/roles/firewall/verify/: main.yml
ansible/roles/fixpi/files/: pipw.sh
ansible/roles/fixpi/tasks/: manage.yml  netboot.yml  nogrow.yml  tweeks.yml  userconf.yml
ansible/roles/fixpi/verify/: main.yml  pi.yml
ansible/roles/fpgas-apt/tasks/: main.yml
ansible/roles/img/files/: img2files.sh
ansible/roles/img/tasks/: main.yml
ansible/roles/nfs/tasks/: main.yml
ansible/roles/nspawn-pi/defaults/: main.yml
ansible/roles/nspawn-pi/tasks/: start.yml  stop.yml
ansible/roles/onpi/handlers/: main.yml
ansible/roles/onpi/tasks/: apt.yml  arty_blink.yml  arty_here.yml  arty_wire.yml  main.yml  nonfs.yml  pistat.yml  sshkeys.yml  tftpd.yml  tmux.yml  tweeks.yml
ansible/roles/pxe/files/: boot.scr.txt
ansible/roles/pxe/tasks/: main.yml  test_clients.yml
docs/: rpi-qemu-videocore-exact.md
docs/superpowers/plans/: 2026-04-04-qemu-vm-testing.md
docs/superpowers/specs/: 2026-04-04-qemu-vm-testing-design.md
tests/inventory/: test-hosts
tests/inventory/host_vars/: test-vm.yml
tests/vm/: build_uboot.py  cloud_init.py  network.py  run_tests.py  vm_manager.py
(+47 files in other folders)
