[project]
name = "fpgas-online-infra"
version = "0.1.0"
description = "Ansible infrastructure for fpgas.online — test harness"
requires-python = ">=3.11"
dependencies = [
    "paramiko",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests"]
